# bookshelf-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
bookshelf_api/: auth.py  db.py  models.py  routes.py
tests/: conftest.py  test_auth.py  test_routes.py
