[project]
name = "bookshelf-api"
version = "0.1.0"
description = "A RESTful API for tracking your reading list, built with FastAPI and SQLite"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
